test/functions/deitz/test_return2.good
Error: Not all function returns return a value (test_return2.chpl:1)
